Fixing the bg scroll bug on iphones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,12 @@ header {
     background-position: center;
 }
 
+.unfix-ios-bg {
+    @supports (-webkit-touch-callout: none) {
+        background-attachment: initial !important;
+    }
+}
+
 /* bg color to cover the bg image*/
 
 .bg-grey {
@@ -188,6 +194,10 @@ a {
     flex-direction: column;
     padding-bottom: 5px;
     font-size: small;
+}
+
+#last-sentence {
+    color:yellow;
 }
 
 /*Style on events hmtml */
